# dy_gis_mgx

./: .cursorrules  .gitignore  2025-07-25prompt.md  2025-07-26prompt.md  2025-07-26实施日志.md  2025-07-28实施日志.md  Git协作最佳实践指南.md  README.md  TRACKING_INTEGRATION_README.md  WANDB_RESUME_GUIDE.md  WANDB_配置说明.md  WandB实验追踪方案 - 20250807.md  batch_processing_result.json  compare_scores.py  image_filenames.json  main.py  pyproject.toml  requirements.txt  run_demo.py  wandb_integration_example.py  wandb_report_with_charts.md  下一步工作计划 - 20250828.md  本周末及下一步任务规划 - 20250821.md  架构设计文档.md  每日报告生成指南.md  电网台区美化治理与打分系统 - 架构设计方案及计划 - 20250804.md  电网台区美化治理与打分系统 - 每日报告 - 20250803.md  电网台区美化治理与打分系统 - 每日报告 - 20250805.md  详细任务分工方案 - 20250805.md  详细任务分工方案补充（阶段5具体实施方案 - 评分算法优化） - 20250810.md  附件2.md
PPXMGX/: check.py  complete_vector_tile_example.py  decoded_glyphs.json  font_pbf_decoder.py  main.py  mapv3.js  meihua.py  meihua2.py  meihua2_optimized.py  meihua3.py  meihua_new.py  network_request_handler.py  self.js  simple_feature_parser.py  tempJson.json  test.py  test_line_beautify.py  test_selfJs.py  tile_loader.py  vector_tile_constructor.py  vector_tile_parser.py  vt_request_handler.py  连线美化优化分析报告.md  项目全量分析报告.md
charts/: detailed_analysis_and_matching.py  generate_combined_score_distribution.py  generate_comparison_chart.py  generate_dimension_comparison.py  generate_normalized_charts.py  generate_score_distribution.py  matching_report.txt  modified_extracted_scores.json  sample_comparison.csv  summary_stats.csv  temp_extracted.json  updated_wandb_report_with_charts.md  人工打分精简版.json  (+1 more)
(+864 files in other folders)
